# DSEpp

./: CMakeLists.txt  Makefile  README.md  mainpage.dox
Parameters_files/: 1LoopDiagram.txt  2LoopDiagram.txt  spectra_parser.txt
Parameters_files/Gluons/: PS_Light_List.txt  RL_MT_Heavy_DD_List.txt  RL_MT_Heavy_List.txt
Parameters_files/Mesons/: Scalar_symmetric.txt
Parameters_files/Propagators/: CHARM_quark.txt  UP_quark.txt
UnitTests/: IntegrationUnitTest.cpp  IntegrationUnitTest.hpp  Integration_test.cpp  UnitTestSuites.cpp  UnitTests.hpp
UnitTests/GeometryTests/: PathsUnitTest.cpp  PathsUnitTest.hpp
UnitTests/IntegrationTests/: IntegrationUnitTest.cpp  IntegrationUnitTest.hpp
docs/html/: _abs_diagram_8hpp_source.html  _abs_vertex_8hpp_source.html  _abstract_kernel_8hpp_source.html  _b_s_e___base_8hpp_source.html  _b_s_e___base__on_cauchy_8hpp_source.html  _b_s_e___builder_8hpp_source.html  _b_s_e___mesons_8hpp_source.html  _d_s_epp_8hpp_source.html  _dedic_mem_8hpp_source.html  _gluon_8hpp_source.html  _integration_mockups_8hpp_source.html  _integration_nodes_8hpp_source.html  _integrator_8h_source.html  _integrator_8hpp_source.html  _integrator___path_8hpp_source.html  _kernel_factory_8hpp_source.html  _kinematics_8hpp_source.html  _line_8hpp_source.html  _linear__interpolation_8h_source.html  _linear__interpolation_8hpp_source.html  _memory_factories_8hpp_source.html  _multi_dim_int__temp_8h_source.html  _one_loop_integrator_8hpp_source.html  _parabola_8hpp_source.html  _parabola_contour_8hpp_source.html  _path_8hpp_source.html  _propagator_8hpp_source.html  _propagator_factory_8hpp_source.html  _quark_8hpp_source.html  _quark__id_8hpp_source.html  _quark__parameters_8hpp_source.html  _quark_types_8hpp_source.html  _r_land_pseudo_scalar_8hpp_source.html  _rainbow_ladder_kernel_8hpp_source.html  _support__functions_8h_source.html  _two_loop_integrator_8hpp_source.html  annotated.html  class_c___abs_diagram-members.html  class_c___abs_diagram.html  class_c___abs_diagram__coll__graph.dot  (+347 more)
docs/latex/: annotated.tex  class_c___abs_diagram.eps  class_c___abs_diagram.tex  class_c___abs_diagram__coll__graph.dot  (+274 more)
source/: DSEpp.hpp  Example.cpp  Integration_test  Integration_test.cpp  Makefile  main.cpp  main_test.cpp  types.h
(+181 files in other folders)
